--- a/src/style/home.css
+++ b/src/style/home.css
@@ -10,10 +10,8 @@ h1 {
 
 .txt {
     margin-top: 64px;
-    width: 350px;
+    width: 650px;
     height: 500px;
-}
-
-p {
-    font-size: 20px;
+    margin-bottom: 80px;
+    font-size: 30px;
 }
