--- a/src/style/boutique.css
+++ b/src/style/boutique.css
@@ -1,4 +1,27 @@
+.containerTitle {
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
 .title {
     display: flex;
     justify-content: center;
+}
+
+.descriptionMontre {
+    font-size: 20px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+.image {
+    height: 500px;
+    width: 200px;
+}
+
+.containerImg {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
 }
