modification couleur, logo

--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: blue;
+    background-color: rgba(16,31,55,255);;
     height: 100px;
     margin-top: 20px;
     display: flex;
