--- a/src/style/header.css
+++ b/src/style/header.css
@@ -1,5 +1,5 @@
 .navbar{
-    background-color: blue;
+    background-color: rgba(16,31,55,255);
     height: 100px;
     display: flex;
     justify-content: space-between;
